force-app/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_Amount_in_Communities__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Amount_in_Communities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to make amount field read-only for community users</description>
    <inlineHelpText>Check to make amount field read-only for community users</inlineHelpText>
    <label>Disable Amount in Communities</label>
    <type>Checkbox</type>
</CustomField>