force-app/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_New_Charge__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_New_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable New Charge</label>
    <type>Checkbox</type>
</CustomField>