force-app/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Disable_Related_To__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Related_To__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you want to make &quot;Related To&quot; read-only</description>
    <inlineHelpText>Check if you want to make &quot;Related To&quot; read-only</inlineHelpText>
    <label>Disable Related To</label>
    <type>Checkbox</type>
</CustomField>