force-app/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Hide_Parent__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Hide_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you want to remove &quot;Parent&quot; field from VT</description>
    <inlineHelpText>Check if you want to remove &quot;Parent&quot; field from VT</inlineHelpText>
    <label>Hide Parent</label>
    <type>Checkbox</type>
</CustomField>