force-app/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Hide_Related_To__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Hide_Related_To__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you want to hide &quot;Related To&quot; field.</description>
    <inlineHelpText>Check if you want to hide &quot;Related To&quot; field.</inlineHelpText>
    <label>Hide Related To</label>
    <type>Checkbox</type>
</CustomField>